<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
<string name="main_bg_subtitle">Tap the magnifying glass to get started.</string>
<string name="upload_date_text">Published on %1$s</string>
<string name="no_player_found">No stream player found. Install VLC?</string>
<string name="no_player_found_toast">No stream player found (you can install VLC to play it).</string>
<string name="install">Install</string>
<string name="cancel">Cancel</string>
<string name="yes">Yes</string>
<string name="ok">OK</string>
<string name="no">No</string>
<string name="later">Later</string>
<string name="open_in_browser">Open in browser</string>
<string name="mark_as_watched">Mark as watched</string>
<string name="open_in_popup_mode">Open in popup mode</string>
<string name="open_with">Open with</string>
<string name="share">Share</string>
<string name="download">Download</string>
<string name="controls_download_desc">Download stream file</string>
<string name="search">Search</string>
<string name="settings">Settings</string>
<string name="did_you_mean">Did you mean \"%1$s\"?</string>
<string name="search_showing_result_for">Showing results for: %s</string>
<string name="share_dialog_title">Share with</string>
<string name="subscribe_button_title">Subscribe</string>
<string name="subscribed_button_title">Subscribed</string>
<string name="unsubscribe">Unsubscribe</string>
<string name="channel_unsubscribed">Channel unsubscribed</string>
<string name="subscription_change_failed">Could not change subscription</string>
<string name="subscription_update_failed">Could not update subscription</string>
<string name="show_info">Show info</string>
<string name="tab_subscriptions">Subscriptions</string>
<string name="tab_bookmarks">Bookmarked Playlists</string>
<string name="tab_choose">Choose Tab</string>
<string name="back">Back</string>
<plurals name="replies">
<item quantity="one">%s reply</item>
<item quantity="other">%s replies</item>
</plurals>
<string name="controls_background_title">Background</string>
<string name="controls_popup_title">Popup</string>
<string name="controls_add_to_playlist_title">Add To</string>
<string name="download_path_title">Video download folder</string>
<string name="download_path_summary">Downloaded video files are stored here</string>
<string name="download_path_dialog_title">Choose download folder for video files</string>
<string name="download_path_audio_title">Audio download folder</string>
<string name="download_path_audio_summary">Downloaded audio files are stored here</string>
<string name="download_path_audio_dialog_title">Choose download folder for audio files</string>
<string name="default_resolution_title">Default resolution</string>
<string name="default_popup_resolution_title">Default popup resolution</string>
<string name="play_with_kodi_title">Play with Kodi</string>
<string name="kore_not_found">Install missing Kore app?</string>
<string name="crash_the_player">Crash the player</string>
<string name="notification_scale_to_square_image_title">Crop thumbnail to 1:1 aspect ratio</string>
<string name="notification_scale_to_square_image_summary">Crop the video thumbnail shown in the notification from 16:9 to 1:1 aspect ratio</string>
<string name="notification_action_0_title">First action button</string>
<string name="notification_action_1_title">Second action button</string>
<string name="notification_action_2_title">Third action button</string>
<string name="notification_action_3_title">Fourth action button</string>
<string name="notification_action_4_title">Fifth action button</string>
<string name="notification_actions_summary">Edit each notification action below by tapping on it. Select up to three of them to be shown in the compact notification by using the checkboxes on the right</string>
<string name="notification_actions_at_most_three">You can select at most three actions to show in the compact notification!</string>
<string name="notification_action_repeat">Repeat</string>
<string name="notification_action_shuffle">Shuffle</string>
<string name="notification_action_buffering">Buffering</string>
<string name="notification_action_nothing">Nothing</string>
<string name="notification_colorize_title">Colorize notification</string>
<string name="notification_colorize_summary">Have Android customize the notification\'s color according to the main color in the thumbnail (note that this is not available on all devices)</string>
<string name="play_audio">Audio</string>
<string name="theme_title">Theme</string>
<string name="night_theme_title">Night Theme</string>
<string name="light_theme_title">Light</string>
<string name="dark_theme_title">Dark</string>
<string name="black_theme_title">Black</string>
<string name="use_inexact_seek_title">Use fast inexact seek</string>
<string name="use_inexact_seek_summary">Inexact seek allows the player to seek to positions faster with reduced precision. Seeking for 5, 15 or 25 seconds doesn\'t work with this</string>
<string name="disable_android_auto_title">Disable Android Auto</string>
<string name="disable_android_auto_summary">Disable Android Auto connection to avoid notification issues on on Android 12 and older.\n\nAfter re-enabling this option, you must restart the app and reconnect to the car for the change to take effect.</string>
<string name="seek_duration_title">Fast-forward/-rewind seek duration</string>
<string name="progressive_load_interval_title">Playback load interval size</string>
<string name="progressive_load_interval_summary">Change the load interval size (currently %s). A lower value may speed up initial video loading. Changes require a player restart</string>
<string name="download_thumbnail_title">Load thumbnails</string>
<string name="download_thumbnail_summary">Turn off to prevent loading thumbnails, saving data and memory usage. Changes clear both in-memory and on-disk image cache</string>
<string name="show_meta_info_title">Show meta info</string>
<string name="show_meta_info_summary">Turn off to hide meta info boxes with additional information about the stream creator, stream content or a search request</string>
<string name="thumbnail_cache_wipe_complete_notice">Image cache wiped</string>
<string name="metadata_cache_wipe_title">Wipe cached metadata</string>
<string name="metadata_cache_wipe_summary">Remove all cached webpage data</string>
<string name="metadata_cache_wipe_complete_notice">Metadata cache wiped</string>
<string name="auto_queue_title">Auto-enqueue next stream</string>
<string name="auto_queue_summary">Continue ending (non-repeating) playback queue by appending a related stream</string>
<string name="auto_queue_toggle">Auto-enqueuing</string>
<string name="volume_gesture_control_title">Volume gesture control</string>
<string name="volume_gesture_control_summary">Use gestures to control player volume</string>
<string name="brightness_gesture_control_title">Brightness gesture control</string>
<string name="brightness_gesture_control_summary">Use gestures to control player brightness</string>
<string name="swipe_seek_gesture_control_title">Swipe to seek</string>
<string name="swipe_seek_gesture_control_summary">Swipe right to fast-forward, and left to rewind</string>
<string name="playback_speed_gesture_control_title">Swipe to control playback speed</string>
<string name="playback_speed_gesture_control_summary">Swipe in the middle to control playback speed. Disables fullscreen gesture control</string>
<string name="show_search_suggestions_title">Search suggestions</string>
<string name="show_search_suggestions_summary">Choose the suggestions to show when searching</string>
<string name="local_search_suggestions">Local search suggestions</string>
<string name="remote_search_suggestions">Remote search suggestions</string>
<string name="search_suggestions_count_title">Search suggestions count</string>
<string name="search_suggestions_count_summary">Number of past search suggestions to display</string>
<string name="enable_search_history_title">Search history</string>
<string name="enable_search_history_summary">Store search queries locally</string>
<string name="enable_watch_history_title">Watch history</string>
<string name="enable_playback_resume_title">Resume playback</string>
<string name="enable_playback_resume_summary">Restore last playback position</string>
<string name="settings_category_clear_data_title">Clear data</string>
<string name="enable_watch_history_summary">Keep track of watched videos</string>
<string name="resume_on_audio_focus_gain_title">Resume playing</string>
<string name="resume_on_audio_focus_gain_summary">Continue playing after interruptions (e.g. phonecalls)</string>
<string name="download_dialog_title">Download</string>
<string name="start_main_player_fullscreen_title">Start main player in fullscreen</string>
<string name="start_main_player_fullscreen_summary">Do not start videos in the mini player, but turn to fullscreen mode directly, if auto rotation is locked. You can still access the mini player by exiting fullscreen</string>
<string name="autoplay_title">Autoplay</string>
<string name="unsupported_url">Unsupported URL</string>
<string name="unsupported_url_dialog_message">Could not recognize the URL. Open with another app?</string>
<string name="default_content_country_title">Default content country</string>
<string name="peertube_instance_url_title">PeerTube instances</string>
<string name="peertube_instance_url_summary">Select your favorite PeerTube instances</string>
<string name="peertube_instance_url_help">Find the instances you like on %s</string>
<string name="peertube_instance_add_title">Add instance</string>
<string name="peertube_instance_add_help">Enter instance URL</string>
<string name="peertube_instance_add_fail">Could not validate instance</string>
<string name="peertube_instance_add_https_only">Only HTTPS URLs are supported</string>
<string name="peertube_instance_add_exists">Instance already exists</string>
<string name="settings_category_player_title">Player</string>
<string name="clear">Clear</string>
<string name="import_data_title">Import database</string>
<string name="export_data_title">Export database</string>
<string name="import_data_summary">Overrides your current history, subscriptions, playlists and (optionally) settings</string>
<string name="export_data_summary">Export history, subscriptions, playlists and settings</string>
<string name="start">Start</string>
<string name="sponsor_block_select_a_category">Select a category</string>
<string name="sponsor_block_skip_marked_segments">Skip marked segments</string>
<string name="submit">Submit</string>
<string name="end">End</string>
<string name="settings_category_backup_title">Backup</string>
<string name="export_data_to_newpipe_title">Export to NewPipe</string>
<string name="export_data_to_newpipe_summary">Export backup in a NewPipe-compatible format</string>
<string name="settings_category_other_platforms_title">Other platforms</string>
    <string name="sponsor_block_time_unset">Not set · Edit</string>
    <string name="sponsor_block_use_position">Use current position</string>
    <string name="sponsor_block_jump_here">Jump here</string>
    <string name="sponsor_block_time_hint">0:00.000</string>
    <string name="sponsor_block_time_help">Enter seconds, minutes:seconds, or hours:minutes:seconds. Up to three decimal places.</string>
    <string name="sponsor_block_queue_hold">Queue will pause at video end while this draft is open.</string>
    <string name="sponsor_block_video_start">Video start</string>
    <string name="sponsor_block_video_end">Video end</string>
    <string name="sponsor_block_minus">−0.1 s</string>
    <string name="sponsor_block_plus">+0.1 s</string>
    <string name="sponsor_block_minus_description">Subtract one tenth of a second</string>
    <string name="sponsor_block_plus_description">Add one tenth of a second</string>
</resources>